# solhat-ui

./: Cargo.toml  README.md  build.rs
assets/: solhat-ui-main.glade  solhat-ui-main.glade~  solhat-ui-main.ui  solhat.desktop  solhat.ui  solhat.ui.cmb  styles.css
docker/: Dockerfile.debian  Dockerfile.fedora  config.sh
src/: main.rs
src/analysis/: sigma.rs  threshold.rs
src/cancel/: mod.rs
src/conversion/: mod.rs
src/process/: mod.rs
src/state/: mod.rs
src/taskstatus/: mod.rs
