[package]
name = "solhat-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
image = "0.24.1"
imageproc = "0.23.0"
clap = { version = "4.2.7", features = ["derive"] }
memmap = "0.7.0"
astro = "2.0.0"
sun = "0.2.0"
chrono = "0.4.19"
fastblur = "0.1.1"
rayon = "1.5.3"
# sciimg = {git = "https://github.com/MarsRaw/sciimg.git", branch = "kmgill_develop", features = ["rayon"]}
sciimg = {path = "../sciimg"}
solhat = {path = "../solhat"}
stump = {git = "https://github.com/MarsRaw/stump.git"}
toml = "0.7.4"
serde = { version = "1.0.125", features = ["derive"] }
astral = {  git="https://github.com/kmgill/astral" }
wild = "2.0.4"
num_cpus = "1.13.1"
anyhow = "1.0.65"
indicatif = "0.17.3"
lazy_static = "1.4.0"
serde_json = "1.0.64"
async-trait = "0.1.57"
tokio = {version="1.21.2", features= ["full"]}
colored = "2.0.0"
itertools = "0.10.5"

[build-dependencies]
glib-build-tools = "0.17.10"
