[package]
name = "solhat-ui"
version = "0.1.0"
edition = "2021"
license = "MIT" 
description = "Application for processing and stacking raw solar and lunar imagery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_10"] }
image = "0.24.1"
imageproc = "0.23.0"
clap = { version = "4.2.7", features = ["derive"] }
memmap = "0.7.0"
astro = "2.0.0"
sun = "0.2.0"
chrono = "0.4.19"
fastblur = "0.1.1"
rayon = "1.5.3"
sciimg = {git = "https://github.com/MarsRaw/sciimg.git", branch = "kmgill_develop", features = ["rayon"]}
# sciimg = {path = "../sciimg"}
solhat = {git = "https://github.com/kmgill/solhat.git"}
# solhat = {path = "../solhat"}
stump = {git = "https://github.com/MarsRaw/stump.git"}
toml = "0.7.4"
serde = { version = "1.0.125", features = ["derive"] }
astral = {  git="https://github.com/kmgill/astral" }
wild = "2.0.4"
num_cpus = "1.13.1"
anyhow = "1.0.65"
indicatif = "0.17.3"
lazy_static = "1.4.0"
serde_json = "1.0.64"
async-trait = "0.1.57"
tokio = {version="1.21.2", features= ["full"]}
colored = "2.0.0"
itertools = "0.11.0"
dirs = "5.0.0"
queues = "1.1.0"
charts = "0.3.0"

[build-dependencies]
glib-build-tools = "0.17.10"

[package.metadata.deb]
maintainer = "Kevin M. Gill <apoapsys@gmail.com>"
copyright = "2023, Kevin M. Gill <apoapsys@gmail.com>"
license-file = ["LICENSE", "2"]
extended-description = "Application for processing and stacking raw solar and lunar imagery" 
depends = "$auto"
section = "science"
priority = "optional"
assets = [
    ["target/release/solhat-ui", "/usr/bin/solhat-ui", "755"],
    ["README.md", "/usr/share/doc/solhat/README", "644"],
    ["assets/hicolor/48x48/apps/solhat.png", "/usr/share/icons/hicolor/48x48/apps/solhat.png","644"],
    ["assets/hicolor/128x128/apps/solhat.png", "/usr/share/icons/hicolor/128x128/apps/solhat.png", "644"],
    ["assets/hicolor/256x256/apps/solhat.png", "/usr/share/icons/hicolor/256x256/apps/solhat.png", "644"],
    ["assets/solhat.desktop", "/usr/share/applications/solhat.desktop", "644"]
 ]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/solhat-ui", dest = "/usr/bin/solhat-ui", mode = "755"},
    { source = "README.md", dest = "/usr/share/doc/solhat/README", mode ="644"},
    { source = "assets/hicolor/48x48/apps/solhat.png", dest = "/usr/share/icons/hicolor/48x48/apps/solhat.png", mode ="644"},
    { source = "assets/hicolor/128x128/apps/solhat.png", dest = "/usr/share/icons/hicolor/128x128/apps/solhat.png", mode ="644"},
    { source = "assets/hicolor/256x256/apps/solhat.png", dest = "/usr/share/icons/hicolor/256x256/apps/solhat.png", mode ="644"},
    { source = "assets/solhat.desktop", dest = "/usr/share/applications/solhat.desktop", mode ="644"},
]